--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
 
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+
 <title>mwoolweaver's Cydia Repository</title>
 
 <style>
