--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />'
 
 <title>mwoolweaver's Cydia Repository</title>
 
