--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
 
-<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />'
+<link rel="shortcut icon" sizes="114x114" href="${resource(dir: 'images', file: 'favicon.ico')}"
+type="image/x-icon">
 
 <title>mwoolweaver's Cydia Repository</title>
 
