better looks maybe???

--- a/index.html
+++ b/index.html
@@ -15,84 +15,44 @@
     <link rel="stylesheet" href="stylesheets/ie.css">
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
+    <link rel="shortcut icon" sizes="114x114" href="${resource(dir: 'images', file: 'favicon.ico')}" type="image/x-icon">
   </head>
   <body>
       <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/mwoolweaver">View On GitHub</a></li>
-        </nav>
+      <center>
+        <h2>
+          <a id="mwoolweavers-cydia-repository" class="anchor" href="#mwoolweavers-cydia-repository" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>mwoolweaver's Cydia Repository</h2>
+      </center>
       </div><!-- end header -->
 
     <div class="wrapper">
 
       <section>
-        <div id="title">
-          <h1>mwoolweaver.github.io</h1>
-          <p>Michael&#39;s Repo</p>
+
+<center>
+
+<h3>
+<a id="add-httpsmwoolweavergithubio-this-repository-to-cydia-_-" class="anchor" href="#add-httpsmwoolweavergithubio-this-repository-to-cydia-_-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Add (<a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://mwoolweaver.github.io" > https://mwoolweaver.github.io</a>) this repository to Cydia (⌐■_■) </h3>
+
+<h4>
+<a id="and" class="anchor" href="#and" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>And</h4>
+
+<h3>
+<a id="-make-sure-you-have-the-version-of-anemone-from-the--nightly-builds-repo--httpsanemonethemingcomnightly--and-not-the-version-on-the-bigboss-repo--ʘ‿ʘ-" class="anchor" href="#-make-sure-you-have-the-version-of-anemone-from-the--nightly-builds-repo--httpsanemonethemingcomnightly--and-not-the-version-on-the-bigboss-repo--%CA%98%E2%80%BF%CA%98-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a> Make sure you have the version of Anemone from the <br> Nightly Builds repo ( <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://anemonetheming.com/nightly/" > https://anemonetheming.com/nightly/</a>) <br> and not the version on the BigBoss repo <br> ʘ‿ʘ </h3>
+
+<p><a href="https://twitter.com/mwoolweaver">Follow @mwoolweaver</a>
+<a href="https://twitter.com/intent/tweet?screen_name=mwoolweaver">Tweet to @mwoolweaver</a></p>
+
+<div id="title">
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/mwoolweaver">mwoolweaver</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
 
-        <p>
-</p>
-
-<p></p>
-
-<p></p>
-
-<p></p>mwoolweaver's Cydia Repository
-
-
-h1 {
-font-size: 40px;
-}
-h2 {
-font-size: 20px;
-}
-h3 {
-font-size: 20px;
-}
-h4 {
-font-size: 20px;
-}
-h5 {
-font-size: 20px;
-}
-
-
-<p></p>
-
-<p></p>
-
-
-<h1>
-<a id="mwoolweavers-cydia-repository" class="anchor" href="#mwoolweavers-cydia-repository" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>mwoolweaver's Cydia Repository</h1>
-
-<h2>
-<a id="cydia-is-required-to-access-this-repo" class="anchor" href="#cydia-is-required-to-access-this-repo" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Cydia is required to access this repo.</h2>
-
-<h4>
-<a id="add-httpsmwoolweavergithubio-this-repository-to-cydia-_-" class="anchor" href="#add-httpsmwoolweavergithubio-this-repository-to-cydia-_-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Add (https://mwoolweaver.github.io) this repository to Cydia (⌐■_■) </h4>
-
-<h4>
-<a id="and" class="anchor" href="#and" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>And</h4>
-
-<h4>
-<a id="-make-sure-you-have-the-version-of-anemone-from-the--nightly-builds-repo--httpsanemonethemingcomnightly--and-not-the-version-on-the-bigboss-repo--ʘ‿ʘ-" class="anchor" href="#-make-sure-you-have-the-version-of-anemone-from-the--nightly-builds-repo--httpsanemonethemingcomnightly--and-not-the-version-on-the-bigboss-repo--%CA%98%E2%80%BF%CA%98-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a> Make sure you have the version of Anemone from the <br> Nightly Builds repo ( https://anemonetheming.com/nightly/) <br> and not the version on the BigBoss repo <br> ʘ‿ʘ </h4>
-
-<p><a href="https://twitter.com/mwoolweaver">Follow @mwoolweaver</a>
-<a href="https://twitter.com/intent/tweet?screen_name=mwoolweaver">Tweet to @mwoolweaver</a></p>
-
-<p>
-</p>
-
-<p></p>
       </section>
-
+    
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
+  </center>
   </body>
 </html>
