probably made this uglier but . . .

--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
     <link rel="shortcut icon" sizes="114x114" href="${resource(dir: 'images', file: 'favicon.ico')}" type="image/x-icon">
   </head>
   <body>
+  <center>
       <div id="header">
-      <center>
-        <h2>
-          <a id="mwoolweavers-cydia-repository" class="anchor" href="#mwoolweavers-cydia-repository" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>mwoolweaver's Cydia Repository</h2>
-      </center>
+        <div class="wrapper">
+          <ul class="nav">
+            <a> mwoolweaver's Cydia Repository </a>
+          </ul>
+        </div>
       </div><!-- end header -->
 
     <div class="wrapper">
 
       <section>
-
-<center>
 
 <h3>
 <a id="add-httpsmwoolweavergithubio-this-repository-to-cydia-_-" class="anchor" href="#add-httpsmwoolweavergithubio-this-repository-to-cydia-_-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Add (<a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://mwoolweaver.github.io" > https://mwoolweaver.github.io</a>) this repository to Cydia (⌐■_■) </h3>
@@ -43,7 +43,7 @@
 <p><a href="https://twitter.com/mwoolweaver">Follow @mwoolweaver</a>
 <a href="https://twitter.com/intent/tweet?screen_name=mwoolweaver">Tweet to @mwoolweaver</a></p>
 
-<div id="title">
+        <div id="title">
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/mwoolweaver">mwoolweaver</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
