--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
   </div>
 
 <h3>
-<a id="add-httpsmwoolweavergithubio-this-repository-to-cydia-_-" class="anchor" href="#add-httpsmwoolweavergithubio-this-repository-to-cydia-_-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Add (<a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://mwoolweaver.github.io" > https://mwoolweaver.github.io</a>) this repository to Cydia (⌐■_■) </h3>
+<a id="add-to-cydia" class="anchor" href="#add-to-cydia" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Add (<a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://mwoolweaver.github.io" > https://mwoolweaver.github.io</a>) to Cydia (⌐■_■) </h3>
 
 <h4>
 <a id="and" class="anchor" href="#and" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>And</h4>
 
 <h3>
-<a id="-make-sure-you-have-the-version-of-anemone-from-the--nightly-builds-repo--httpsanemonethemingcomnightly--and-not-the-version-on-the-bigboss-repo--ʘ‿ʘ-" class="anchor" href="#-make-sure-you-have-the-version-of-anemone-from-the--nightly-builds-repo--httpsanemonethemingcomnightly--and-not-the-version-on-the-bigboss-repo--%CA%98%E2%80%BF%CA%98-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a> Make sure you have the version of Anemone from the <br> Nightly Builds repo ( <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://anemonetheming.com/nightly/" > https://anemonetheming.com/nightly/</a>) <br> and not the version on the BigBoss repo <br> ʘ‿ʘ </h3>
+<a id="anemone-nightly-builds-repo" class="anchor" href="#anemone-nightly-builds-repo" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a> Make sure you have the version of Anemone from the <br> Nightly Builds repo ( <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://anemonetheming.com/nightly/" > https://anemonetheming.com/nightly/</a>) <br> and not the version on the BigBoss repo <br> ʘ‿ʘ </h3>
 
 <p><a href="https://twitter.com/mwoolweaver">Follow @mwoolweaver</a>
 <a href="https://twitter.com/intent/tweet?screen_name=mwoolweaver">Tweet to @mwoolweaver</a></p>
