--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
 
         <div id="title">
           <hr>
+          <center>
           <span class="credits left">Project maintained by <a href="https://github.com/mwoolweaver">mwoolweaver</a></span>
-          </hr>
+          </center>
         </div>
 
       </section>
