--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </div>
 
 <h3>
-<a id="add-to-cydia" class="anchor" href="#add-to-cydia" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Add (<a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://mwoolweaver.github.io" > https://mwoolweaver.github.io</a>) to Cydia (⌐■_■) </h3>
+<a id="add-to-cydia" class="anchor" href="#add-to-cydia" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Add (<a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://mwoolweaver.github.io" > https://mwoolweaver.github.io</a>) to Cydia <br> (⌐■_■) </h3>
 
 <h4>
 <a id="and" class="anchor" href="#and" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>And</h4>
