--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <div class="wrapper">
     <ul class="nav">
-         <a> mwoolweaver's Cydia Repository </a>
+         <h3> mwoolweaver's Cydia Repository </h3>
      </ul>
   </div>
 
