--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <a id="and" class="anchor" href="#and" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>And</h4>
 
 <h3>
-<a id="anemone-nightly-builds-repo" class="anchor" href="#anemone-nightly-builds-repo" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a> Make sure you have Anemone's <br> Nightly Builds (<a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://anemonetheming.com/nightly/" > https://anemonetheming.com/nightly/</a>) <br> ʘ‿ʘ </h3>
+<a id="anemone-nightly-builds-repo" class="anchor" href="#anemone-nightly-builds-repo" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a> Make sure you have Anemone's Nightly Builds <br> (<a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://anemonetheming.com/nightly/" > https://anemonetheming.com/nightly/</a>) <br> ʘ‿ʘ </h3>
 
 <p><a href="https://twitter.com/mwoolweaver">Follow @mwoolweaver</a>
 
