--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 <hr>
 
 <h3>
-<a id="add-to-cydia" class="anchor" href="#add-to-cydia" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Add (<a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://mwoolweaver.github.io" > https://mwoolweaver.github.io</a>) to Cydia <br> ⌐■_■ </h3>
+<a id="add-to-cydia" class="anchor" href="#add-to-cydia" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Add (<a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://mwoolweaver.github.io" >https://mwoolweaver.github.io</a>) to Cydia <br> ⌐■_■ </h3>
 
 <h4>
 <a id="and" class="anchor" href="#and" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>And</h4>
 
 <h3>
-<a id="anemone-nightly-builds-repo" class="anchor" href="#anemone-nightly-builds-repo" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a> Make sure you have Anemone's Nightly Builds repo <br> (<a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://anemonetheming.com/nightly/" > https://anemonetheming.com/nightly/</a>) <br> ʘ‿ʘ </h3>
+<a id="anemone-nightly-builds" class="anchor" href="#anemone-nightly-builds" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>You to have Anemone's Nightly Builds repo <br> (<a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://anemonetheming.com/nightly/" >https://anemonetheming.com/nightly/</a>) <br> ʘ‿ʘ </h3>
 
 <p><a href="https://twitter.com/mwoolweaver">Follow @mwoolweaver</a>
 
