--- a/Anemone-Fonts/index.html
+++ b/Anemone-Fonts/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>mwoolweaver's Cydia Repository</title>
+    <title>The Anemone Font Repository</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -22,11 +22,11 @@
   <div class="wrapper">
   <section>
 
-<h2> mwoolweaver's Cydia Repository </h2>
+<h2> The Anemone Font Repository </h2>
 <hr>
 
 <h3>
-<a id="add-to-cydia" class="anchor" href="#add-to-cydia" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Add <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://mwoolweaver.github.io" >https://mwoolweaver.github.io</a> to Cydia <br>⌐■_■ </h3>
+<a id="add-to-cydia" class="anchor" href="#add-to-cydia" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Add <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://mwoolweaver.github.io/Anemone-Fonts" >https://mwoolweaver.github.io/Anemone-Fonts</a> to Cydia <br>⌐■_■ </h3>
 
 <h4>
 <a id="and" class="anchor" href="#and" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>And</h4>
