--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>mwoolweaver's Public Repository</title>
+    <title>Repositories by mwoolweaver</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -22,11 +22,13 @@
   <div class="wrapper">
   <section>
 
-<h2> mwoolweaver's Public Repository </h2>
+<h2> Repositories by <a href="https://github.com/mwoolweaver">mwoolweaver</a></h2>
 <hr>
 
+<h3><a href="https://mwoolweaver.github.io/Anemone-Fonts" >https://mwoolweaver.github.io/Anemone-Fonts</a><br>⌐■_■ </h3>
+
 <h3>
-<a id="add-to-cydia" class="anchor" href="#add-to-cydia" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Add <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://mwoolweaver.github.io/Public-Repo" >https://mwoolweaver.github.io/Public-Repo</a> to Cydia <br>⌐■_■ </h3>
+<a href="https://mwoolweaver.github.io/Public-Repo" >https://mwoolweaver.github.io/Public-Repo</a><br>⌐■_■ </h3>
 
 <p><a href="https://twitter.com/mwoolweaver">Follow @mwoolweaver</a>
 
