--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="wrapper">
   <section>
 
-<h2> Repositories by <a href="https://github.com/mwoolweaver">mwoolweaver</a></h2>
+<h2> Repositories by mwoolweaver</h2>
 <hr>
 
 <h3><a href="https://mwoolweaver.github.io/Anemone-Fonts" >https://mwoolweaver.github.io/Anemone-Fonts</a><br>⌐■_■ </h3>
