--- a/Anemone-Fonts/index.html
+++ b/Anemone-Fonts/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="stylesheets/ie.css">
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <link rel="shortcut icon" sizes="114x114" href="${resource(dir: 'images', file: '../favicon.ico')}" type="image/x-icon">
+    <link rel="shortcut icon" sizes="114x114" href="${resource(file: '../favicon.ico')}" type="image/x-icon">
   </head>
   <body>
   <center>
