--- a/Anemone-Fonts/index.html
+++ b/Anemone-Fonts/index.html
@@ -12,7 +12,7 @@
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <!--[if lt IE 8]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
+    <link rel="stylesheet" href="../stylesheets/ie.css">
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="shortcut icon" sizes="114x114" href="${resource(dir: '../', file: 'favicon.ico')}" type="image/x-icon">
