--- a/Anemone-Fonts/index.html
+++ b/Anemone-Fonts/index.html
@@ -26,7 +26,7 @@
 <hr>
 
 <h3>
-<a id="add-to-cydia" class="anchor" href="#add-to-cydia" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Add <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://mwoolweaver.github.io/Anemone-Fonts" >https://mwoolweaver.github.io/Anemone-Fonts</a> to Cydia <br>⌐■_■ </h3>
+<a id="add-to-cydia" class="anchor" href="#add-to-cydia" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tap to Add <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://mwoolweaver.github.io/Anemone-Fonts" > The Anemone-Fonts Repo</a> to Cydia <br>⌐■_■ </h3>
 
 <h4>
 <a id="and" class="anchor" href="#and" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>And</h4>
