--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
 <h3>
 <a href="https://mwoolweaver.github.io/Public-Repo" >https://mwoolweaver.github.io/Public-Repo</a><br> ⌐■_■ </h3>
 
-<a href="//www.reddit.com/submit" onclick="window.location = '//www.reddit.com/submit?url=' + encodeURIComponent(window.location); return false"> <img src="//www.redditstatic.com/spreddit7.gif" alt="submit to reddit" border="0" /> </a>
+<p><a href="https://reddit.com/u/mwoolweaver">Find /u/mwoolweaver</a>
 <hr>
 
 
 <h2> Other Contributions </h2>
 <hr>
-<h3><a href="https://ioshackerwiki.com/" > iOS Hacker Wiki </a><br> ┬─┬ノ( º _ ºノ) </h3>
+<h3><a href="https://ioshackerwiki.com/" > iOS Hacker Wiki </a> <br> ┬─┬ノ( º _ ºノ) </h3>
 
 <p><a href="https://twitter.com/mwoolweaver">Follow @mwoolweaver</a>
 
