one more adjustment

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Repositories by mwoolweaver</title>
+    <title>Things I Have Collected - mwoolweaver</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -18,28 +18,40 @@
     <link rel="shortcut icon" sizes="114x114" href="${resource(dir: 'images', file: 'favicon.ico')}" type="image/x-icon">
   </head>
   <body>
-  <center>
+  
   <div class="wrapper">
   <section>
-
-<h2> Repositories by mwoolweaver</h2>
+<center>
+<h2> Things I Have Collected - <a href="https://github.com/mwoolweaver" > mwoolweaver </a> </h2>
 <hr>
 
-<h3><a href="https://mwoolweaver.github.io/Anemone-Fonts" >https://mwoolweaver.github.io/Anemone-Fonts</a><br> ⌐■_■ </h3>
+
+<h2> <a href="https://github.com/mwoolweaver/mwoolweaver.github.io"> Cydia Repositories </a> </h2>
+<hr>
+</center>
+
+<h3><a href="https://mwoolweaver.github.io/Anemone-Fonts" >https://mwoolweaver.github.io/Anemone-Fonts</a> ⌐■_■ </h3>
 
 <h3>
-<a href="https://mwoolweaver.github.io/Public-Repo" >https://mwoolweaver.github.io/Public-Repo</a><br> ⌐■_■ </h3>
+<a href="https://mwoolweaver.github.io/Public-Repo" >https://mwoolweaver.github.io/Public-Repo</a> ✌ ⎦˚◡˚⎣ ✌  </h3>
 
-<p><a href="https://reddit.com/u/mwoolweaver">Find /u/mwoolweaver</a>
+<center>
+<p><a href="https://reddit.com/u/mwoolweaver">Find /u/mwoolweaver</a> on Reddit. </p>
 <hr>
+</center>
 
-
-<h2> Other Contributions </h2>
+<center>
+<h2> <a href="https://ioshackerwiki.com/" > iOS Kernel Stuff </a> </h2>
 <hr>
-<h3><a href="https://ioshackerwiki.com/" > iOS Hacker Wiki </a> <br> ┬─┬ノ( º _ ºノ) </h3>
+</center>
 
-<p><a href="https://twitter.com/mwoolweaver">Follow @mwoolweaver</a>
+<h3> <a href="https://github.com/iOS-10-Stuffs/Decrypted-Kernels" > Decrypted iOS 10 Kernels </a> ╯°□°）╯︵ ┻━┻ </h3>
 
+<h3> <a href="https://github.com/iOS-10-Stuffs/Disassembled-Kernels" > Decrypted iOS 10 Kernels </a> ┬─┬ノ( º _ ºノ) </h3>
+
+<center>
+<p><a href="https://twitter.com/mwoolweaver">Follow @mwoolweaver</a> on Twitter.
+</center>
         <div id="title">
           <hr>
           <center>
@@ -51,6 +63,5 @@
     
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-  </center>
   </body>
 </html>
