--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 <h3> <a href="https://github.com/iOS-10-Stuffs/Decrypted-Kernels" > Decrypted iOS 10 Kernels </a> ╯°□°）╯︵ ┻━┻ </h3>
 
-<h3> <a href="https://github.com/iOS-10-Stuffs/Disassembled-Kernels" > Decrypted iOS 10 Kernels </a> ┬─┬ノ( º _ ºノ) </h3>
+<h3> <a href="https://github.com/iOS-10-Stuffs/Disassembled-Kernels" > Disassembled iOS 10 Kernels </a> ┬─┬ノ( º _ ºノ) </h3>
 
 <center>
 <p><a href="https://twitter.com/mwoolweaver">Follow @mwoolweaver</a> on Twitter.
