--- a/index.html
+++ b/index.html
@@ -23,38 +23,48 @@
   <section>
 <center>
 <h2> Things I Have Collected - <a href="https://github.com/mwoolweaver" > mwoolweaver </a> </h2>
+
+
+<h4>(・_・、)(_・、 )(・、 )</h4>
 <hr>
-
-
 <h2> <a href="https://github.com/mwoolweaver/mwoolweaver.github.io"> Cydia Repositories </a> </h2>
+
+
+<h4>ლ,ᔑ•ﺪ͟͠•ᔐ.ლ</h4>
 <hr>
 </center>
 
-<h3><a href="https://mwoolweaver.github.io/Anemone-Fonts" >https://mwoolweaver.github.io/Anemone-Fonts</a> ⌐■_■ </h3>
+<h3><a href="https://mwoolweaver.github.io/Anemone-Fonts" >https://mwoolweaver.github.io/Anemone-Fonts</a>( ◕ ◡ ◕ )</h3>
 
 <h3>
-<a href="https://mwoolweaver.github.io/Public-Repo" >https://mwoolweaver.github.io/Public-Repo</a> ✌ ⎦˚◡˚⎣ ✌  </h3>
+<a href="https://mwoolweaver.github.io/Public-Repo" >https://mwoolweaver.github.io/Public-Repo</a> (⌐■_■)  </h3>
 
 <center>
+
+ 
+<h4>╯°□°）╯︵ ┻━┻</h4>
 <p><a href="https://reddit.com/u/mwoolweaver">Find /u/mwoolweaver</a> on Reddit. </p>
 <hr>
 </center>
 
 <center>
 <h2> <a href="https://ioshackerwiki.com/" > iOS Kernel Stuff </a> </h2>
+
+<h4>┬─┬ノ( º _ ºノ)</h4>
 <hr>
 </center>
 
-<h3> <a href="https://github.com/iOS-10-Stuffs/Decrypted-Kernels" > Decrypted iOS 10 Kernels </a> ╯°□°）╯︵ ┻━┻ </h3>
+<h3> <a href="https://github.com/iOS-10-Stuffs/Decrypted-Kernels" > Decrypted iOS 10 Kernels </a> ಠ_ಠ </h3>
 
-<h3> <a href="https://github.com/iOS-10-Stuffs/Disassembled-Kernels" > Disassembled iOS 10 Kernels </a> ┬─┬ノ( º _ ºノ) </h3>
+<h3> <a href="https://github.com/iOS-10-Stuffs/Disassembled-Kernels" > Disassembled iOS 10 Kernels </a> ಠ‿ಠ </h3>
 
 <center>
-<p><a href="https://twitter.com/mwoolweaver">Follow @mwoolweaver</a> on Twitter.
-</center>
 
+
+<h4>º╲˚\╭ᴖ_ᴖ╮/˚╱º</h4>
+<p><a href="https://twitter.com/mwoolweaver">Follow @mwoolweaver</a> on Twitter. </p>
 <hr>
-
+</center>
      </section>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
