--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 <h2> Things I Have Collected - <a href="https://github.com/mwoolweaver" > mwoolweaver </a> </h2>
 
 
-<h4>(・_・、)(_・、 )(・、 )</h4>
+<h3>﴾͡๏̯͡๏﴿ O'RLY?</h3>
 <hr>
 <h2> <a href="https://github.com/mwoolweaver/mwoolweaver.github.io"> Cydia Repositories </a> </h2>
 
 
-<h4>ლ,ᔑ•ﺪ͟͠•ᔐ.ლ</h4>
+<h3>(•_•) ( •_•)>⌐■-■ (⌐■_■)</h3>
 <hr>
 </center>
 
@@ -39,18 +39,16 @@
 <h3>
 <a href="https://mwoolweaver.github.io/Public-Repo" >https://mwoolweaver.github.io/Public-Repo</a> (⌐■_■)  </h3>
 
-<center>
 
- 
-<h4>╯°□°）╯︵ ┻━┻</h4>
+<center> 
+<h3>[̲̅$̲̅(̲̅ ͡° ͜ʖ ͡°̲̅)̲̅$̲̅]</h3>
 <p><a href="https://reddit.com/u/mwoolweaver">Find /u/mwoolweaver</a> on Reddit. </p>
 <hr>
-</center>
 
-<center>
+
 <h2> <a href="https://ioshackerwiki.com/" > iOS Kernel Stuff </a> </h2>
 
-<h4>┬─┬ノ( º _ ºノ)</h4>
+<h3>┬─┬ノ( º _ ºノ)</h3>
 <hr>
 </center>
 
@@ -61,7 +59,7 @@
 <center>
 
 
-<h4>º╲˚\╭ᴖ_ᴖ╮/˚╱º</h4>
+<h3>━╤デ╦︻(▀̿̿Ĺ̯̿̿▀̿ ̿)</h3>
 <p><a href="https://twitter.com/mwoolweaver">Follow @mwoolweaver</a> on Twitter. </p>
 <hr>
 </center>
