--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
 
 <h3>(•_•) ( •_•)>⌐■-■ (⌐■_■)</h3>
 <hr>
-</center>
 
-<h3><a href="https://mwoolweaver.github.io/Anemone-Fonts" >https://mwoolweaver.github.io/Anemone-Fonts</a>( ◕ ◡ ◕ )</h3>
+
+<h3><a href="https://mwoolweaver.github.io/Anemone-Fonts" > Anemone Fonts </a> ( ◕ ◡ ◕ )</h3>
 
 <h3>
-<a href="https://mwoolweaver.github.io/Public-Repo" >https://mwoolweaver.github.io/Public-Repo</a> (⌐■_■)  </h3>
+<a href="https://mwoolweaver.github.io/Public-Repo" > Public Repo </a> (⌐■_■)  </h3>
 
 
-<center> 
-<h3>[̲̅$̲̅(̲̅ ͡° ͜ʖ ͡°̲̅)̲̅$̲̅]</h3>
+
+<h3>( ∙_∙) ( ∙_∙)>⌐■-■ (⌐■_■)</h3>
 <p><a href="https://reddit.com/u/mwoolweaver">Find /u/mwoolweaver</a> on Reddit. </p>
 <hr>
 
@@ -50,13 +50,12 @@
 
 <h3>┬─┬ノ( º _ ºノ)</h3>
 <hr>
-</center>
+
 
 <h3> <a href="https://github.com/iOS-10-Stuffs/Decrypted-Kernels" > Decrypted iOS 10 Kernels </a> ಠ_ಠ </h3>
 
 <h3> <a href="https://github.com/iOS-10-Stuffs/Disassembled-Kernels" > Disassembled iOS 10 Kernels </a> ಠ‿ಠ </h3>
 
-<center>
 
 
 <h3>━╤デ╦︻(▀̿̿Ĺ̯̿̿▀̿ ̿)</h3>
