--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
       <a href="https://mwoolweaver.github.io/Public-Repo" > Public Repo </a> (⌐■_■)  </h3>
 
       <h3> ▨-▨¬ლ(•_•) (▨_▨¬) </h3>
-      <p><a href="https://reddit.com/u/mwoolweaver">Find /u/mwoolweaver</a> on Reddit. </p>
       <hr>
 
       <h2> <a href="https://ioshackerwiki.com/" > iOS Kernel Stuff </a> </h2>
@@ -48,8 +47,10 @@
       <h3> <a href="https://github.com/iOS-10-Stuffs/Disassembled-Kernels" > Disassembled iOS 10 Kernels </a> ಠ‿ಠ </h3>
 
       <h3> ━╤デ╦︻(▀̿̿Ĺ̯̿̿▀̿ ̿) </h3>
-      <p><a href="https://twitter.com/mwoolweaver">Follow @mwoolweaver</a> on Twitter. </p>
+      <p><a href="https://twitter.com/mwoolweaver"></a>  </p>
       <hr>
+      <span class="credits left">Follow <a href="https://twitter.com/mwoolweaver">@mwoolweaver</a> on Twitter. </span>
+      <span class="credits right"> Find <a href="https://www.reddit.com/user/mwoolweaver/">/u/mwoolweaver</a> on Twitter.</span>
       </center>
       </section>
     </div>
