--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <p><a href="https://twitter.com/mwoolweaver"></a>  </p>
       <hr>
       <span class="credits left">Follow <a href="https://twitter.com/mwoolweaver">@mwoolweaver</a> on Twitter. </span>
-      <span class="credits right"> Find <a href="https://www.reddit.com/user/mwoolweaver/">/u/mwoolweaver</a> on Twitter.</span>
+      <span class="credits right"> Find <a href="https://www.reddit.com/user/mwoolweaver/">/u/mwoolweaver</a> on Reddit.</span>
       </center>
       </section>
     </div>
