--- a/Anemone-Fonts/index.html
+++ b/Anemone-Fonts/index.html
@@ -16,35 +16,28 @@
     <![endif]-->
   </head>
   <body>
-  <center>
-  <div class="wrapper">
-  <section>
+    <div class="wrapper">
+      <section>
+      <center>
 
-<h2> The Anemone Font Repository </h2>
-<hr>
+        <h2> The Anemone Font Repository </h2>
+        <span class="credits left">by <a href="https://github.com/mwoolweaver">mwoolweaver</a></span>
+        <hr>
 
-<h3>
-<a id="add-to-cydia" class="anchor" href="#add-to-cydia" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tap to Add <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://mwoolweaver.github.io/Anemone-Fonts" > The Anemone-Fonts Repo</a> to Cydia <br>⌐■_■ </h3>
+        <h3> <a id="add-to-cydia" class="anchor" href="#add-to-cydia" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tap to Add <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://mwoolweaver.github.io/Anemone-Fonts" > The Anemone-Fonts Repo</a> to Cydia <br>⌐■_■ </h3>
 
-<h4>
-<a id="and" class="anchor" href="#and" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>And</h4>
+        <h4> <a id="and" class="anchor" href="#and" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>And</h4>
 
-<h3>
-<a id="anemone-nightly-builds" class="anchor" href="#anemone-nightly-builds" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>You will need Anemone's Nightly Builds repo<br> <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://anemonetheming.com/nightly/" >https://anemonetheming.com/nightly/</a> <br>ʘ‿ʘ </h3>
-
-<p><a href="https://twitter.com/mwoolweaver">Follow @mwoolweaver</a>
-
+        <h3> <a id="anemone-nightly-builds" class="anchor" href="#anemone-nightly-builds" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>You will need Anemone's Nightly Builds repo<br> <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://anemonetheming.com/nightly/" >https://anemonetheming.com/nightly/</a> <br>ʘ‿ʘ </h3>        
+        <hr>
+        
         <div id="title">
-          <hr>
-          <center>
-          <span class="credits left">Project maintained by <a href="https://github.com/mwoolweaver">mwoolweaver</a></span>
-          </center>
+          <span class="credits left">Follow <a href="https://twitter.com/mwoolweaver">@mwoolweaver</a> on Twitter. </span>
+          <span class="credits right"> Find <a href="https://www.reddit.com/user/mwoolweaver/">/u/mwoolweaver</a> on Reddit.</span>
         </div>
-
+      </center>
       </section>
-    
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-  </center>
   </body>
 </html>
