--- a/index.html
+++ b/index.html
@@ -20,37 +20,40 @@
       <section>
       <center>
 
-      <h2> Things I Have Collected - <a href="https://github.com/mwoolweaver" > mwoolweaver </a> </h2>
+        <h2> Things I Have Collected - <a href="https://github.com/mwoolweaver" > mwoolweaver </a> </h2>
 
-      <h3> ﴾͡๏̯͡๏﴿ O'RLY? </h3>
-      <hr>
-      <h2> <a href="https://github.com/mwoolweaver/mwoolweaver.github.io"> Cydia Repositories </a> </h2>
+        <h3> ﴾͡๏̯͡๏﴿ O'RLY? </h3>
+        <hr>
+        <h2> <a href="https://github.com/mwoolweaver/mwoolweaver.github.io"> Cydia Repositories </a> </h2>
 
-      <h3> (•_•) ( •_•)>⌐■-■ (⌐■_■) </h3>
-      <hr>
+        <h3> (•_•) ( •_•)>⌐■-■ (⌐■_■) </h3>
+        <hr>
 
-      <h3><a href="https://mwoolweaver.github.io/Anemone-Fonts" > Anemone Fonts </a> ( ◕ ◡ ◕ ) </h3>
+        <h3><a href="https://mwoolweaver.github.io/Anemone-Fonts" > Anemone Fonts </a> ( ◕ ◡ ◕ ) </h3>
 
-      <h3>
-      <a href="https://mwoolweaver.github.io/Public-Repo" > Public Repo </a> (⌐■_■)  </h3>
+        <h3>
+        <a href="https://mwoolweaver.github.io/Public-Repo" > Public Repo </a> (⌐■_■)  </h3>
 
-      <h3> ▨-▨¬ლ(•_•) (▨_▨¬) </h3>
-      <hr>
+        <h3> ▨-▨¬ლ(•_•) (▨_▨¬) </h3>
+        <hr>
 
-      <h2> <a href="https://ioshackerwiki.com/" > iOS Kernel Stuff </a> </h2>
+        <h2> <a href="https://ioshackerwiki.com/" > iOS Kernel Stuff </a> </h2>
 
-      <h3> ̿ ̿'̿'\̵͇̿̿\з=(⌐■_■)=ε/̵͇̿̿/'̿'̿ ̿ ̿ </h3>
-      <hr>
+        <h3> ̿ ̿'̿'\̵͇̿̿\з=(⌐■_■)=ε/̵͇̿̿/'̿'̿ ̿ ̿ </h3>
+        <hr>
 
-      <h3> <a href="https://github.com/iOS-10-Stuffs/Decrypted-Kernels" > Decrypted iOS 10 Kernels </a> ಠ_ಠ </h3>
+        <h3> <a href="https://github.com/iOS-10-Stuffs/Decrypted-Kernels" > Decrypted iOS 10 Kernels </a> ಠ_ಠ </h3>
 
-      <h3> <a href="https://github.com/iOS-10-Stuffs/Disassembled-Kernels" > Disassembled iOS 10 Kernels </a> ಠ‿ಠ </h3>
+        <h3> <a href="https://github.com/iOS-10-Stuffs/Disassembled-Kernels" > Disassembled iOS 10 Kernels </a> ಠ‿ಠ </h3>
 
-      <h3> ━╤デ╦︻(▀̿̿Ĺ̯̿̿▀̿ ̿) </h3>
-      <p><a href="https://twitter.com/mwoolweaver"></a>  </p>
-      <hr>
-      <span class="credits left">Follow <a href="https://twitter.com/mwoolweaver">@mwoolweaver</a> on Twitter. </span>
-      <span class="credits right"> Find <a href="https://www.reddit.com/user/mwoolweaver/">/u/mwoolweaver</a> on Reddit.</span>
+        <h3> ━╤デ╦︻(▀̿̿Ĺ̯̿̿▀̿ ̿) </h3>
+        <p><a href="https://twitter.com/mwoolweaver"></a>  </p>
+        <hr>
+        
+        <div id="title">
+          <span class="credits left">Follow <a href="https://twitter.com/mwoolweaver">@mwoolweaver</a> on Twitter. </span>
+          <span class="credits right"> Find <a href="https://www.reddit.com/user/mwoolweaver/">/u/mwoolweaver</a> on Reddit.</span>
+        </div>
       </center>
       </section>
     </div>
