--- a/Public-Repo/index.html
+++ b/Public-Repo/index.html
@@ -20,8 +20,10 @@
       <section>
       <center>
         <h2> Public Repository </h2>
-        <span class="credits left">by <a href="https://github.com/mwoolweaver">mwoolweaver</a></span>
-        <hr>
+        <div id="title">
+          <span class="credits center">by <a href="https://github.com/mwoolweaver">mwoolweaver</a></span>
+          <hr>
+        </div>
 
         <h3> <a id="add-to-cydia" class="anchor" href="#add-to-cydia" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Add <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://mwoolweaver.github.io/Public-Repo" >https://mwoolweaver.github.io/Public-Repo</a> to Cydia <br>⌐■_■ </h3>
         <hr>
