--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Things I Have Collected - mwoolweaver</title>
+    <title> Things I Have Collected </title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -20,10 +20,12 @@
       <section>
       <center>
 
-        <h2> Things I Have Collected - <a href="https://github.com/mwoolweaver" > mwoolweaver </a> </h2>
-
+        <h2> A Collection of Things </h2>
         <h3> ﴾͡๏̯͡๏﴿ O'RLY? </h3>
-        <hr>
+        <div id="title">
+          <span class="credits center">by <a href="https://github.com/mwoolweaver">mwoolweaver</a></span>
+          <hr>
+        </div>
         <h2> <a href="https://github.com/mwoolweaver/mwoolweaver.github.io"> Cydia Repositories </a> </h2>
 
         <h3> (•_•) ( •_•)>⌐■-■ (⌐■_■) </h3>
@@ -31,8 +33,7 @@
 
         <h3><a href="https://mwoolweaver.github.io/Anemone-Fonts" > Anemone Fonts </a> ( ◕ ◡ ◕ ) </h3>
 
-        <h3>
-        <a href="https://mwoolweaver.github.io/Public-Repo" > Public Repo </a> (⌐■_■)  </h3>
+        <h3> <a href="https://mwoolweaver.github.io/Public-Repo" > Public Repo </a> (⌐■_■)  </h3>
 
         <h3> ▨-▨¬ლ(•_•) (▨_▨¬) </h3>
         <hr>
@@ -47,7 +48,6 @@
         <h3> <a href="https://github.com/iOS-10-Stuffs/Disassembled-Kernels" > Disassembled iOS 10 Kernels </a> ಠ‿ಠ </h3>
 
         <h3> ━╤デ╦︻(▀̿̿Ĺ̯̿̿▀̿ ̿) </h3>
-        <p><a href="https://twitter.com/mwoolweaver"></a>  </p>
         <hr>
         
         <div id="title">
