--- a/Anemone-Fonts/index.html
+++ b/Anemone-Fonts/index.html
@@ -21,8 +21,10 @@
       <center>
 
         <h2> The Anemone Font Repository </h2>
-        <span class="credits left">by <a href="https://github.com/mwoolweaver">mwoolweaver</a></span>
-        <hr>
+        <div id="title">
+          <span class="credits center">by <a href="https://github.com/mwoolweaver">mwoolweaver</a></span>
+          <hr>
+        </div>
 
         <h3> <a id="add-to-cydia" class="anchor" href="#add-to-cydia" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tap to Add <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://mwoolweaver.github.io/Anemone-Fonts" > The Anemone-Fonts Repo</a> to Cydia <br>⌐■_■ </h3>
 
