--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title> Things I Have Collected </title>
+    <title> A Collection of Things </title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -22,7 +22,7 @@
 
         <div id="title">
           <h2> A Collection of Things </h2>
-          <span class="credits center">by <a href="https://github.com/mwoolweaver">mwoolweaver</a></span>
+          <span class="credits center"> by <a href="https://github.com/mwoolweaver"> mwoolweaver </a> </span>
           <hr>
         </div>
         
