--- a/Public-Repo/index.html
+++ b/Public-Repo/index.html
@@ -1,41 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Public Repository</title>
-    <link rel="stylesheet" href="../stylesheets/styles.css">
-    <link rel="stylesheet" href="../stylesheets/github-dark.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="../javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="../stylesheets/ie.css">
-    <![endif]-->
+
+    <link rel="stylesheet" type="text/css" href="../stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/github-dark.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/print.css" media="print">
+
+    <title> Michael's Public Repository </title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <section>
-      <center>
-        <h2> Public Repository </h2>
+    <div class="container">
+      <section id="main_content">
+
+       <h2> Michael's Public Repository </h2>
         <div id="title">
           <span class="credits center"> by <a href="https://github.com/mwoolweaver"> mwoolweaver </a> </span>
           <hr>
         </div>
 
-        <h3> <a id="add-to-cydia" class="anchor" href="#add-to-cydia" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Add <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://mwoolweaver.github.io/Public-Repo" >https://mwoolweaver.github.io/Public-Repo</a> to Cydia <br>⌐■_■ </h3>
+        <h3> <a id="add-to-cydia" class="anchor" href="#add-to-cydia" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Add <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://mwoolweaver.github.io/Public-Repo" >https://mwoolweaver.github.io/Public-Repo</a> to Cydia ⌐■_■ </h3>
         <hr>
 
         <div id="title">
           <span class="credits left">Follow <a href="https://twitter.com/mwoolweaver">@mwoolweaver</a> on Twitter. </span>
           <span class="credits right"> Find <a href="https://www.reddit.com/user/mwoolweaver/">/u/mwoolweaver</a> on Reddit.</span>
         </div>
-      </center>
+
       </section>
-    
-    </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+    </div>  
   </body>
+  
 </html>
