--- a/Anemone-Fonts/index.html
+++ b/Anemone-Fonts/index.html
@@ -25,7 +25,7 @@
 
         <h4> <a id="and" class="anchor" href="#and" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>And</h4>
 
-        <h3> <a id="anemone-nightly-builds" class="anchor" href="#anemone-nightly-builds" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>You will need Anemone's Nightly Builds repo<br> <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://anemonetheming.com/nightly/" >https://anemonetheming.com/nightly/</a> ʘ‿ʘ </h3>        
+        <h3> <a id="anemone-nightly-builds" class="anchor" href="#anemone-nightly-builds" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>You will need <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://anemonetheming.com/nightly/" >Anemone's Nightly Builds</a> repo ʘ‿ʘ </h3>        
         <hr>
         
         <div id="title">
