more minor changes

--- a/Anemone-Fonts/index.html
+++ b/Anemone-Fonts/index.html
@@ -21,14 +21,14 @@
           <hr>
         </div>
 
-        <h3> <a id="add-to-cydia" class="anchor" href="#add-to-cydia" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tap to Add <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://mwoolweaver.github.io/Anemone-Fonts" > The Anemone-Fonts Repo</a> to Cydia ⌐■_■ </h3>
+        <h3> Tap to Add <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://mwoolweaver.github.io/Anemone-Fonts" > The Anemone-Fonts Repo</a> to Cydia ⌐■_■ </h3>
 
-        <h4> <a id="and" class="anchor" href="#and" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>And</h4>
+        <h4> And </h4>
 
-        <h3> <a id="anemone-nightly-builds" class="anchor" href="#anemone-nightly-builds" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>You will need <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://anemonetheming.com/nightly/" >Anemone's Nightly Builds</a> repo ʘ‿ʘ </h3>        
-        <hr>
+        <h3> </span></a>You will need <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://anemonetheming.com/nightly/" >Anemone's Nightly Builds</a> repo ʘ‿ʘ </h3>        
         
         <div id="title">
+          <hr>
           <span class="credits left">Follow <a href="https://twitter.com/mwoolweaver">@mwoolweaver</a> on Twitter. </span>
           <span class="credits right"> Find <a href="https://www.reddit.com/user/mwoolweaver/">/u/mwoolweaver</a> on Reddit.</span>
         </div>
