--- a/Public-Repo/index.html
+++ b/Public-Repo/index.html
@@ -21,10 +21,10 @@
           <hr>
         </div>
 
-        <h3> <a id="add-to-cydia" class="anchor" href="#add-to-cydia" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Add <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://mwoolweaver.github.io/Public-Repo" >https://mwoolweaver.github.io/Public-Repo</a> to Cydia ⌐■_■ </h3>
-        <hr>
+        <h3> Add <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://mwoolweaver.github.io/Public-Repo" >https://mwoolweaver.github.io/Public-Repo</a> to Cydia ⌐■_■ </h3>
 
         <div id="title">
+          <hr>
           <span class="credits left">Follow <a href="https://twitter.com/mwoolweaver">@mwoolweaver</a> on Twitter. </span>
           <span class="credits right"> Find <a href="https://www.reddit.com/user/mwoolweaver/">/u/mwoolweaver</a> on Reddit.</span>
         </div>
