--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
        <h2> A Collection of Things </h2>
 
        <div id="title">
-          
+
           <span class="credits center"> by <a href="https://github.com/mwoolweaver"> mwoolweaver </a> </span>
           <hr>
         </div>
@@ -42,12 +42,13 @@
 
         <div id="title">
           <hr>
-          <span class="credits left">Follow <a href="https://twitter.com/mwoolweaver">@mwoolweaver</a> on Twitter. </span>
-          <span class="credits right"> Find <a href="https://www.reddit.com/user/mwoolweaver/">/u/mwoolweaver</a> on Reddit.</span>
+          <span class="credits right"> Reddit <br> <a href="https://www.reddit.com/user/mwoolweaver/">/u/mwoolweaver</a> </span>
+
+          <span class="credits left"> Twitter <br> <a href="https://twitter.com/mwoolweaver">@mwoolweaver</a> </span>
         </div>
 
       </section>
-    </div>  
+    </div>
   </body>
-  
+
 </html>
