--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
   <body>
     <div class="container">
       <section id="main_content">
-       <h2> A Collection of Things </h2>
+        <h2> A Collection of Things </h2>
 
-       <div id="title">
+        <div id="title">
 
           <span class="credits center"> by <a href="https://github.com/mwoolweaver"> mwoolweaver </a> </span>
           <hr>
         </div>
 
-        <h2> <a href="https://github.com/mwoolweaver/mwoolweaver.github.io"> Cydia Repositories </a> </h2>
+        <h2> <a href="https://mwoolweaver.github.io/CydiaRepos.html"> Cydia Repositories </a> </h2>
 
         <h3> (•_•) ( •_•)>⌐■-■ (⌐■_■) </h3>
 
