--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
           <hr>
         </div>
 
+        <!--
+        <h2> <a href="https://mwoolweaver.github.io/Blog/"> My Opinions </a> </h2>
+        -->
+
         <h2> <a href="https://mwoolweaver.github.io/CydiaRepos.html"> Cydia Repositories </a> </h2>
 
         <h3> (•_•) ( •_•)>⌐■-■ (⌐■_■) </h3>
