--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
+  <style>
+  body {
+    font-family: 'BubblegumSans';
+  }
+  </style>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+    <link rel="stylesheet" type="text/css" href="https://mwoolweaver.github.io/fonts/fonts.css"/>
 
     <title> A Collection of Things</title>
   </head>
