something needed changing

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
   <style>
   body {
-    font-family: 'BubblegumSans';
+    font-family: 'BeatsByDre';
   }
   </style>
     <meta charset='utf-8'>
