--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
-    <link rel="stylesheet" type="text/css" href="https://mwoolweaver.github.io/fonts/fonts.css"/>
+    <link rel="stylesheet" type="text/css" href="https://mwoolweaver.us/fonts/fonts.css"/>
 
     <title> A Collection of Things</title>
   </head>
@@ -32,13 +32,13 @@
         <h2> <a href="https://mwoolweaver.github.io/Blog/"> My Opinions </a> </h2>
         -->
 
-        <h2> <a href="https://mwoolweaver.github.io/CydiaRepos.html"> Cydia Repos </a> </h2>
+        <h2> <a href="https://mwoolweaver.us/CydiaRepos.html"> Cydia Repos </a> </h2>
 
         <h3> (•_•) ( •_•)>⌐■-■ (⌐■_■) </h3>
 
-        <h3> <a href="https://mwoolweaver.github.io/Anemone-Fonts" > Anemone Fonts </a> ( ◕ ◡ ◕ ) </h3>
+        <h3> <a href="https://mwoolweaver.us/Anemone-Fonts" > Anemone Fonts </a> ( ◕ ◡ ◕ ) </h3>
 
-        <h3> <a href="https://mwoolweaver.github.io/Public-Repo" > Public Repo </a> (⌐■_■)  </h3>
+        <h3> <a href="https://mwoolweaver.us/Public-Repo" > Public Repo </a> (⌐■_■)  </h3>
 
         <hr>
 
