--- a/CydiaRepos.html
+++ b/CydiaRepos.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
-    <link rel="stylesheet" type="text/css" href="https://mwoolweaver.github.io/fonts/fonts.css"/>
+    <link rel="stylesheet" type="text/css" href="https://mwoolweaver.us/fonts/fonts.css"/>
 
     <title> A Collection of Things</title>
   </head>
@@ -33,9 +33,9 @@
 
         <h3> (•_•) ( •_•)>⌐■-■ (⌐■_■) </h3>
 
-        <h3> <a href="https://mwoolweaver.github.io/Anemone-Fonts" > Anemone Fonts </a> ( ◕ ◡ ◕ ) </h3>
+        <h3> <a href="https://mwoolweaver.us/Anemone-Fonts" > Anemone Fonts </a> ( ◕ ◡ ◕ ) </h3>
 
-        <h3> <a href="https://mwoolweaver.github.io/Public-Repo" > Public Repo </a> (⌐■_■)  </h3>
+        <h3> <a href="https://mwoolweaver.us/Public-Repo" > Public Repo </a> (⌐■_■)  </h3>
         <div id="title">
           <hr>
           <span class="credits right"> Reddit <br> <a href="https://www.reddit.com/user/mwoolweaver/">/u/mwoolweaver</a> </span>
