--- a/CydiaRepos.html
+++ b/CydiaRepos.html
@@ -33,9 +33,9 @@
 
         <h3> (•_•) ( •_•)>⌐■-■ (⌐■_■) </h3>
 
-        <h3> <a href="http://mwoolweaver.us/Anemone-Fonts/" > Anemone Fonts </a> ( ◕ ◡ ◕ ) </h3>
+        <h3> <a href="https://mwoolweaver.us/Anemone-Fonts/" > Anemone Fonts </a> ( ◕ ◡ ◕ ) </h3>
 
-        <h3> <a href="http://mwoolweaver.us/Public-Repo" > Public Repo </a> (⌐■_■)  </h3>
+        <h3> <a href="https://mwoolweaver.us/Public-Repo" > Public Repo </a> (⌐■_■)  </h3>
         <div id="title">
           <hr>
           <span class="credits right"> Reddit <br> <a href="https://www.reddit.com/user/mwoolweaver/">/u/mwoolweaver</a> </span>
