--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <div class="container">
       <section id="main_content">
-        <h2> <a href="https://mwoolweaver.us/"> A Collection of Things </a> </h2>
+        <h2> <a href="https://mwoolweaver.us/" style="text-decoration: none" > A Collection of Things </a> </h2>
 
         <div id="title">
 
