--- a/CydiaRepos.html
+++ b/CydiaRepos.html
@@ -21,11 +21,11 @@
   <body>
     <div class="container">
       <section id="main_content">
-        <h2> <a href="https://mwoolweaver.us/" style="text-decoration: none" > A Collection of Things </a> </h2>
+        <h2> A Collection of Things </h2>
 
         <div id="title">
 
-          <span class="credits center"> by <a href="https://github.com/mwoolweaver"> mwoolweaver </a> </span>
+          <span class="credits center"> by <a href="https://github.com/mwoolweaver"> mwoolweaver @ href="https://mwoolweaver.us/"> mwoolweaver.us </a> </span>
           <hr>
         </div>
 
