--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <div id="title">
 
-          <span class="credits center"> by <a href="https://github.com/mwoolweaver"> mwoolweaver @ href="https://mwoolweaver.us/"> mwoolweaver.us </a> </span>
+          <span class="credits center"> by <a href="https://github.com/mwoolweaver"> mwoolweaver </a> @ <a href="https://mwoolweaver.us/"> mwoolweaver.us </a> </span>
           <hr>
         </div>
 
