--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <div id="title">
 
-          <span class="credits center"> by <a href="https://github.com/mwoolweaver"> mwoolweaver </a> @ <a href="https://mwoolweaver.us/"> mwoolweaver.us </a> </span>
+          <span class="credits center"> by <a href="https://github.com/mwoolweaver" style="text-decoration: none"> mwoolweaver </a> @ <a href="https://mwoolweaver.us/" style="text-decoration: none"> mwoolweaver.us </a> </span>
           <hr>
         </div>
 
@@ -32,29 +32,29 @@
         <h2> <a href="https://mwoolweaver.github.io/Blog/"> My Opinions </a> </h2>
         -->
 
-        <h2> <a href="https://mwoolweaver.us/CydiaRepos.html"> Cydia Repos </a> </h2>
+        <h2> <a href="https://mwoolweaver.us/CydiaRepos.html" style="text-decoration: none"> Cydia Repos </a> </h2>
 
         <h3> (•_•) ( •_•)>⌐■-■ (⌐■_■) </h3>
 
-        <h3> <a href="https://mwoolweaver.us/Anemone-Fonts" > Anemone Fonts </a> ( ◕ ◡ ◕ ) </h3>
+        <h3> <a href="https://mwoolweaver.us/Anemone-Fonts" style="text-decoration: none"> Anemone Fonts </a> ( ◕ ◡ ◕ ) </h3>
 
-        <h3> <a href="https://mwoolweaver.us/Public-Repo" > Public Repo </a> (⌐■_■)  </h3>
+        <h3> <a href="https://mwoolweaver.us/Public-Repo" style="text-decoration: none"> Public Repo </a> (⌐■_■)  </h3>
 
         <hr>
 
-        <h2> <a href="https://ioshackerwiki.com/" > iOS Kernel Stuff </a> </h2>
+        <h2> <a href="https://ioshackerwiki.com/" style="text-decoration: none"> iOS Kernel Stuff </a> </h2>
 
         <h3> ▨-▨¬ლ(•_•) (▨_▨¬) </h3>
 
-        <h3> <a href="https://github.com/iOS-10-Stuffs/Decrypted-Kernels" > Decrypted iOS 10 Kernels </a> ಠ_ಠ </h3>
+        <h3> <a href="https://github.com/iOS-10-Stuffs/Decrypted-Kernels" style="text-decoration: none"> Decrypted iOS 10 Kernels </a> ಠ_ಠ </h3>
 
-        <h3> <a href="https://github.com/iOS-10-Stuffs/Disassembled-Kernels" > Disassembled iOS 10 Kernels </a> ಠ‿ಠ </h3>
+        <h3> <a href="https://github.com/iOS-10-Stuffs/Disassembled-Kernels" style="text-decoration: none"> Disassembled iOS 10 Kernels </a> ಠ‿ಠ </h3>
 
         <div id="title">
           <hr>
-          <span class="credits right"> Reddit <br> <a href="https://www.reddit.com/user/mwoolweaver/">/u/mwoolweaver</a> </span>
+          <span class="credits right"> Reddit <br> <a href="https://www.reddit.com/user/mwoolweaver/" style="text-decoration: none">/u/mwoolweaver</a> </span>
 
-          <span class="credits left"> Twitter <br> <a href="https://twitter.com/mwoolweaver">@mwoolweaver</a> </span>
+          <span class="credits left"> Twitter <br> <a href="https://twitter.com/mwoolweaver" style="text-decoration: none">@mwoolweaver</a> </span>
         </div>
 
       </section>
