--- a/CydiaRepos.html
+++ b/CydiaRepos.html
@@ -25,7 +25,7 @@
 
         <div id="title">
 
-          <span class="credits center"> by <a href="https://github.com/mwoolweaver"> mwoolweaver </a> @ <a href="https://mwoolweaver.us/"> mwoolweaver.us </a> </span>
+          <span class="credits center"> by <a href="https://github.com/mwoolweaver" style="text-decoration: none"> mwoolweaver </a> @ <a href="https://mwoolweaver.us/" style="text-decoration: none"> mwoolweaver.us </a> </span>
           <hr>
         </div>
 
@@ -33,14 +33,14 @@
 
         <h3> (•_•) ( •_•)>⌐■-■ (⌐■_■) </h3>
 
-        <h3> <a href="https://mwoolweaver.us/Anemone-Fonts/" > Anemone Fonts </a> ( ◕ ◡ ◕ ) </h3>
+        <h3> <a href="https://mwoolweaver.us/Anemone-Fonts/" style="text-decoration: none"> Anemone Fonts </a> ( ◕ ◡ ◕ ) </h3>
 
-        <h3> <a href="https://mwoolweaver.us/Public-Repo" > Public Repo </a> (⌐■_■)  </h3>
+        <h3> <a href="https://mwoolweaver.us/Public-Repo" style="text-decoration: none"> Public Repo </a> (⌐■_■)  </h3>
         <div id="title">
           <hr>
-          <span class="credits right"> Reddit <br> <a href="https://www.reddit.com/user/mwoolweaver/">/u/mwoolweaver</a> </span>
+          <span class="credits right"> Reddit <br> <a href="https://www.reddit.com/user/mwoolweaver/" style="text-decoration: none">/u/mwoolweaver</a> </span>
 
-          <span class="credits left"> Twitter <br> <a href="https://twitter.com/mwoolweaver">@mwoolweaver</a> </span>
+          <span class="credits left"> Twitter <br> <a href="https://twitter.com/mwoolweaver" style="text-decoration: none">@mwoolweaver</a> </span>
         </div>
 
       </section>
