--- a/CydiaRepos.html
+++ b/CydiaRepos.html
@@ -29,7 +29,7 @@
           <hr>
         </div>
 
-        <h2> <a href=""> Cydia Repositories </a> </h2>
+        <h2> <a href="https://mwoolweaver.us/CydiaRepos" style="text-decoration: none"> Cydia Repos </a> </h2>
 
         <h3> (•_•) ( •_•)>⌐■-■ (⌐■_■) </h3>
 
